tests/cases/vectors/ok/vector-generic-function-param.ari
fn identity[T](value: T) -> T {
  return value;
}

fn main() -> i64 {
  let values: Vec[i64] = [1, 2, 3];
  let copied = identity(values);
  return len(copied) + copied[0] + copied[2];
}
