tests/cases/vectors/errors/slice-view-method-shape.ari
fn main() -> i64 {
  var values = [1, 2, 3];
  let view = values.as_slice(0);
  return len(view);
}
